Adding usage and queue info

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,12 @@
       </div>
     </header>
 
+    <nav class="subnav" data-cluster-nav>
+      <a href="index.html" aria-current="page">Fleet status</a>
+      <a href="quota.html">Quota usage</a>
+      <a href="queues.html">Queue health</a>
+    </nav>
+
     <div id="overview-content">
       <section class="cards">
         <article class="card">
