--- a/web/queues.html
+++ b/web/queues.html
@@ -38,7 +38,7 @@
   <div class="page">
     <header class="hero">
       <div>
-        <p class="eyebrow" id="header-eyebrow">HPC Status</p>
+        <p class="eyebrow" id="header-eyebrow">HPC STATUS</p>
         <h1>Queue health</h1>
         <p class="lede">
           Visualize queue depth and node availability for each cluster in the fleet.
