--- a/web/quota.html
+++ b/web/quota.html
@@ -38,7 +38,7 @@
   <div class="page">
     <header class="hero">
       <div>
-        <p class="eyebrow" id="header-eyebrow">HPC Status</p>
+        <p class="eyebrow" id="header-eyebrow">HPC STATUS</p>
         <h1>Quota usage</h1>
         <p class="lede">
           Track available project hours and allocations for every monitored cluster.
