Update configs, collectors, server routes and add storage page

--- a/web/index.html
+++ b/web/index.html
@@ -69,6 +69,7 @@
       <a href="index.html" aria-current="page">Fleet status</a>
       <a href="queues.html">Queue health</a>
       <a href="quota.html">Quota usage</a>
+      <a href="storage.html">Storage</a>
     </nav>
 
     <main id="main-content">
