--- a/web/queues.html
+++ b/web/queues.html
@@ -58,6 +58,7 @@
       <a href="index.html">Fleet status</a>
       <a href="queues.html" aria-current="page">Queue health</a>
       <a href="quota.html">Quota usage</a>
+      <a href="storage.html">Storage</a>
     </nav>
 
     <p id="queue-status" class="status-banner" role="status" hidden></p>
