Fix UI layout issues and add platform-specific fleet status
- Move Insights panel to dedicated tab (insights.html) to reduce main page clutter
- Fix Quota usage layout: increase cluster-grid minmax from 320px to 480px for 2-column max
- Add responsive breakpoint at 1024px to force single column view
- Fix intermittent connection issues:
  - Add session reuse and connection pool limits in HPCMP collector
  - Enable SQLite WAL mode for better concurrent access
  - Use atomic file writes for JSON cache to prevent corruption
- Add platform-aware fleet status: generic/NOAA platforms now use PW cluster collector
  instead of HPCMP scraper, displaying clusters from "pw cluster ls"

--- a/web/index.html
+++ b/web/index.html
@@ -70,6 +70,7 @@
       <a href="queues.html">Queue health</a>
       <a href="quota.html">Quota usage</a>
       <a href="storage.html">Storage</a>
+      <a href="insights.html">Insights</a>
     </nav>
 
     <main id="main-content">
@@ -93,14 +94,6 @@
             <p>Last observed</p>
             <h2 id="last-updated" aria-live="polite">--</h2>
           </article>
-        </section>
-
-        <section id="insights-section" class="insights-panel" aria-label="Insights and recommendations" hidden>
-          <div class="insights-header">
-            <h3>Insights</h3>
-            <span id="insights-count" class="badge">0</span>
-          </div>
-          <ul id="insights-list" class="insights-list" aria-live="polite"></ul>
         </section>
 
         <section class="grid" aria-label="Fleet breakdown">
