--- a/web/quota.html
+++ b/web/quota.html
@@ -59,6 +59,7 @@
       <a href="queues.html">Queue health</a>
       <a href="quota.html" aria-current="page">Quota usage</a>
       <a href="storage.html">Storage</a>
+      <a href="insights.html">Insights</a>
     </nav>
 
     <p id="data-status" class="status-banner" role="status" hidden></p>
