--- a/web/storage.html
+++ b/web/storage.html
@@ -68,19 +68,22 @@
       <article class="card">
         <p>Connected clusters</p>
         <h2 id="cluster-count">--</h2>
+        <span class="card-tooltip" title="Clusters reporting storage information">ⓘ</span>
       </article>
       <article class="card">
         <p>Filesystems monitored</p>
         <h2 id="filesystem-count">--</h2>
+        <span class="card-tooltip" title="Total storage mounts tracked: $HOME, $WORKDIR, $SCRATCH, and project directories">ⓘ</span>
       </article>
       <article class="card alert">
         <p>Near capacity</p>
         <h2 id="warning-count">--</h2>
-        <span class="card-tooltip" title="Filesystems above 80% usage">&#9432;</span>
+        <span class="card-tooltip" title="Filesystems above 80% usage. High usage may cause job failures or prevent file creation.">ⓘ</span>
       </article>
       <article class="card">
         <p>Last updated</p>
         <h2 id="last-updated">--</h2>
+        <span class="card-tooltip" title="When storage data was last collected">ⓘ</span>
       </article>
     </section>
 
@@ -96,7 +99,7 @@
       <div class="panel-head">
         <div>
           <p class="eyebrow">Filesystem overview</p>
-          <h3>Storage capacity by cluster</h3>
+          <h3>Storage capacity by cluster <span class="panel-help" title="$HOME: backed up, small quota. $WORKDIR: larger quota for active projects. $SCRATCH: high-speed temp storage, subject to purge (auto-delete of old files).">ⓘ</span></h3>
           <p id="storage-grid-note" class="muted-text">Loading storage data...</p>
         </div>
       </div>
