Add custom tooltips and fix button/layout styling
- Implement custom CSS tooltips replacing browser-native title tooltips
- Style help icons as circular badges with hover states
- Fix ghost button borders to work in both light and dark modes
- Add refresh icon with spinning animation to all refresh buttons
- Add loading state styling for buttons during data refresh
- Improve navigation bar with container styling and hover states
- Reduce spacing between summary cards and status breakdown panels
- Prevent hero action buttons from wrapping to new line
- Add responsive breakpoints for mobile layout

Co-authored-by: mattshax <mattshax@users.noreply.github.com>

--- a/web/insights.html
+++ b/web/insights.html
@@ -46,7 +46,10 @@
       </div>
       <div class="hero-actions">
         <a class="ghost-btn" href="index.html">← Fleet dashboard</a>
-        <button id="refresh-btn" class="ghost-btn">Refresh data</button>
+        <button id="refresh-btn" class="ghost-btn">
+          <span class="btn-icon" aria-hidden="true">↻</span>
+          <span>Refresh</span>
+        </button>
         <button id="theme-toggle" class="theme-btn" aria-label="Toggle color theme">
           <span class="theme-icon" aria-hidden="true">🌙</span>
           <span class="theme-label">Dark</span>
