--- a/web/quota.html
+++ b/web/quota.html
@@ -46,7 +46,10 @@
       </div>
       <div class="hero-actions">
         <a class="ghost-btn" href="index.html">← Fleet dashboard</a>
-        <button id="refresh-btn" class="ghost-btn">Refresh data</button>
+        <button id="refresh-btn" class="ghost-btn">
+          <span class="btn-icon" aria-hidden="true">↻</span>
+          <span>Refresh</span>
+        </button>
         <button id="theme-toggle" class="theme-btn" aria-label="Toggle color theme">
           <span class="theme-icon" aria-hidden="true">🌙</span>
           <span class="theme-label">Dark</span>
