Fix incorrect storage backup tip (#23)
* Improve UI/UX for researchers and practitioners

- Add tooltips with HPC terminology explanations across all pages
- Add visual status indicators with icons for accessibility
- Add global Help panel with quick reference guide
- Add relative time formatting for data freshness
- Add dismissible Quick Tips panels per page
- Add scheduler-agnostic normalization module
- Add JSON Schema and OpenAPI specifications
- Add HPC glossary documentation

Co-authored-by: mattshax <mattshax@users.noreply.github.com>

* Add custom tooltips and fix button/layout styling

- Implement custom CSS tooltips replacing browser-native title tooltips
- Style help icons as circular badges with hover states
- Fix ghost button borders to work in both light and dark modes
- Add refresh icon with spinning animation to all refresh buttons
- Add loading state styling for buttons during data refresh
- Improve navigation bar with container styling and hover states
- Reduce spacing between summary cards and status breakdown panels
- Prevent hero action buttons from wrapping to new line
- Add responsive breakpoints for mobile layout

Co-authored-by: mattshax <mattshax@users.noreply.github.com>

* Fix incorrect storage backup tip

Co-authored-by: mattshax <mattshax@users.noreply.github.com>

---------

Co-authored-by: mattshax <mattshax@users.noreply.github.com>

--- a/web/storage.html
+++ b/web/storage.html
@@ -46,7 +46,10 @@
       </div>
       <div class="hero-actions">
         <a class="ghost-btn" href="index.html">← Fleet dashboard</a>
-        <button id="refresh-btn" class="ghost-btn">Refresh data</button>
+        <button id="refresh-btn" class="ghost-btn">
+          <span class="btn-icon" aria-hidden="true">↻</span>
+          <span>Refresh</span>
+        </button>
         <button id="theme-toggle" class="theme-btn" aria-label="Toggle color theme">
           <span class="theme-icon" aria-hidden="true">🌙</span>
           <span class="theme-label">Dark</span>
@@ -68,19 +71,22 @@
       <article class="card">
         <p>Connected clusters</p>
         <h2 id="cluster-count">--</h2>
+        <span class="card-tooltip" title="Clusters reporting storage information">ⓘ</span>
       </article>
       <article class="card">
         <p>Filesystems monitored</p>
         <h2 id="filesystem-count">--</h2>
+        <span class="card-tooltip" title="Total storage mounts tracked: $HOME, $WORKDIR, $SCRATCH, and project directories">ⓘ</span>
       </article>
       <article class="card alert">
         <p>Near capacity</p>
         <h2 id="warning-count">--</h2>
-        <span class="card-tooltip" title="Filesystems above 80% usage">&#9432;</span>
+        <span class="card-tooltip" title="Filesystems above 80% usage. High usage may cause job failures or prevent file creation.">ⓘ</span>
       </article>
       <article class="card">
         <p>Last updated</p>
         <h2 id="last-updated">--</h2>
+        <span class="card-tooltip" title="When storage data was last collected">ⓘ</span>
       </article>
     </section>
 
@@ -96,7 +102,7 @@
       <div class="panel-head">
         <div>
           <p class="eyebrow">Filesystem overview</p>
-          <h3>Storage capacity by cluster</h3>
+          <h3>Storage capacity by cluster <span class="panel-help" title="$HOME: backed up, small quota. $WORKDIR: larger quota for active projects. $SCRATCH: high-speed temp storage, subject to purge (auto-delete of old files).">ⓘ</span></h3>
           <p id="storage-grid-note" class="muted-text">Loading storage data...</p>
         </div>
       </div>
