--- a/web/insights.html
+++ b/web/insights.html
@@ -46,7 +46,10 @@
       </div>
       <div class="hero-actions">
         <a class="ghost-btn" href="index.html">← Fleet dashboard</a>
-        <button id="refresh-btn" class="ghost-btn">Refresh data</button>
+        <button id="refresh-btn" class="ghost-btn">
+          <span class="btn-icon" aria-hidden="true">↻</span>
+          <span>Refresh</span>
+        </button>
         <button id="theme-toggle" class="theme-btn" aria-label="Toggle color theme">
           <span class="theme-icon" aria-hidden="true">🌙</span>
           <span class="theme-label">Dark</span>
@@ -68,18 +71,22 @@
       <article class="card">
         <p>Total insights</p>
         <h2 id="total-insights">--</h2>
+        <span class="card-tooltip" title="Recommendations and alerts generated from fleet analysis">ⓘ</span>
       </article>
       <article class="card alert">
         <p>Warnings</p>
         <h2 id="warning-count">--</h2>
+        <span class="card-tooltip" title="Issues requiring attention: low allocations, storage near capacity, system degradation">ⓘ</span>
       </article>
       <article class="card">
         <p>Informational</p>
         <h2 id="info-count">--</h2>
+        <span class="card-tooltip" title="General status updates and optimization suggestions">ⓘ</span>
       </article>
       <article class="card">
         <p>Last updated</p>
         <h2 id="last-updated">--</h2>
+        <span class="card-tooltip" title="When insights were last generated from fleet data">ⓘ</span>
       </article>
     </section>
 
@@ -87,7 +94,7 @@
       <div class="panel-head">
         <div>
           <p class="eyebrow">Fleet analysis</p>
-          <h3>Recommendations and alerts</h3>
+          <h3>Recommendations and alerts <span class="panel-help" title="Insights are sorted by severity: CRITICAL (blocks work), WARNING (needs attention), INFO (status updates), SUGGESTION (optimizations)">ⓘ</span></h3>
           <p id="insights-note" class="muted-text">Loading insights...</p>
         </div>
       </div>
